2024-12-23  Barış Getiren  <baris.getiren@std.yeditepe.edu.tr>

	Implement unit tests for parser.c
	* test/test_parser.c (parser_test_sum): Implement function.
	(parser_test_set): Likewise.
	(parser_test_copy): Likewise.
	(parser_test_aver): Likewise.
	(parser_test_diag): Likewise.
	(parser_test_if): Likewise.
	(parser_test_add): Likewise.
	(parser_test_sub): Likewise.
	(parser_test_exchange): Likewise.
	(parser_test_print): Likewise.

2024-12-23  Berk Tahir Kılıç  <berktahir.kilic@std.yeditepe.edu.tr>

	Implement the parser
	* src/parser.c (parser_reset_table): Implement function.
	(parser_parse_statement): Likewise.
	(parser_display_table): Likewise.
	(tokenize): Likewise.
	(check_operations): Likewise.
	(check_cond): Likewise.

2024-12-20  Barış Getiren  <baris.getiren@std.yeditepe.edu.tr>

	Implement unit tests for refera.c
	* test/test_refera.c (refera_test_copy_variable): Implement function.
	(refera_test_create_variable): Likewise.
	(refera_test_set_variable): Likewise.
	(refera_test_get_variable): Likewise.
	(refera_test_state_init): Likewise.
	(refera_test_state_destroy): Likewise.
	(refera_test_eval_string): Likewise.
	(refera_test_eval_file): Add stub function.

2024-12-20  Ahmet Hakan Candar  <ahmethakan.candar@std.yeditepe.edu.tr>

	* Makefile: Add $(LIB_DIR) to clean.
	* src/refera.c (refera_copy_variable): Implement function.
	(refera_create_variable): Likewise.
	(refera_set_variable): Ensure memory is freed.

2024-12-19  Ahmet Hakan Candar  <ahmethakan.candar@std.yeditepe.edu.tr>

	Initial test suite integration
	* test/test.h: New file.
	* test/test.c: Likewise.
	* test/test_functions.h: Likewise.
	* test/test_functions.c: Likewise.
	* test/test_parser.h: Likewise.
	* test/test_parser.c: Likewise.
	* test/test_refera.h: Likewise.
	* test/test_refera.c: Likewise.

2024-12-14  Egemen Aybir  <egemen.aybir@std.yeditepe.edu.tr>

	* src/operations.h: Added support for string evaluation operations.
	* src/refera.c (refera_check_if): Implement function.